corrected spacing and wording

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,14 +22,14 @@ hr {
     background-color: #FFE69A;
     border-style: none;
     width: 40%;
-    height: 2px;
+    height: 3px;
     margin-top: 30px;
     margin-bottom: 30px;
   }
 
 .introText{
   position: absolute;
-  bottom: 6rem;
+  bottom: 8rem;
   right: 6rem;
   color: #FFD24C;
   text-align: right;
@@ -45,12 +45,11 @@ h1 {
 
 h2 {
   color: #92B4EC;
-  padding-top: 10px;
+  padding-top: 20px;
   margin-bottom: 0;
   font-size: 60px;
   font-weight: 200;
   font-family: 'Parisienne', cursive;
-  /* text-decoration: underline 2px; */
 }
 
 h3 {
@@ -166,9 +165,6 @@ a:visited {
 
 table {
   width: 60%;
-}
-
-.center {
   margin-left: auto;
   margin-right: auto;
 }
